# ChangeLog for sci-libs/blas-atlas
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.88 2008/09/23 14:20:11 bicatali Exp $

  23 Sep 2008; Sébastien Fabbro <bicatali@gentoo.org>
  files/eselect.cblas.threaded-atlas:
  Fixed a cblas link in the threaded-atlas profile

  05 Sep 2008; Sébastien Fabbro <bicatali@gentoo.org>
  -files/3.7.11-allow-any-gcc-version.patch,
  -files/blas-atlas-3.9.1-Core2Duo-detect.patch,
  -files/3.6.0-ppc-configure.patch, -files/3.7.11-ppc-configure.patch,
  -files/blas-atlas-3.9.1-timing.patch, -files/c-ATLAS,
  -files/c-threaded-ATLAS, -files/eselect.blas, -files/eselect.cblas,
  -files/f77-ATLAS, -files/f77-threaded-ATLAS,
  -files/gnuc_default_fix.patch, -files/unbuffered.patch,
  -blas-atlas-3.6.0-r1.ebuild, -blas-atlas-3.6.0-r2.ebuild,
  -blas-atlas-3.7.11.ebuild, -blas-atlas-3.7.11-r1.ebuild,
  -blas-atlas-3.9.2.ebuild:
  Removed old versions

  28 Aug 2008; Raúl Porcel <armin76@gentoo.org> blas-atlas-3.8.0.ebuild,
  blas-atlas-3.9.3.ebuild:
  Add fix to compile on alpha, alpha stable wrt #200336

*blas-atlas-3.9.3 (15 Aug 2008)

  15 Aug 2008; Markus Dittrich <markusle@gentoo.org>
  -blas-atlas-3.9.1.ebuild, +blas-atlas-3.9.3.ebuild:
  Version bump and removed previous revision. Updated shared libs patch to
  honor user's LDFLAGS.

*blas-atlas-3.9.2 (10 Aug 2008)

  10 Aug 2008; Markus Dittrich <markusle@gentoo.org>
  +blas-atlas-3.9.2.ebuild:
  Version bump.

  03 Aug 2008; Markus Dittrich <markusle@gentoo.org>
  +files/blas-atlas-3.9.1-Core2Duo-detect.patch,
  +files/blas-atlas-3.9.1-timing.patch, blas-atlas-3.9.1.ebuild:
  Added patches to fix infinite recursion during bootstrapping and to
  improve Core2Duo detection (fixes bug #233614).

*blas-atlas-3.9.1 (22 Jul 2008)

  22 Jul 2008; Markus Dittrich <markusle@gentoo.org>
  -files/atlas-3.9.0-upstream-fixes.patch, -blas-atlas-3.9.0.ebuild,
  +blas-atlas-3.9.1.ebuild:
  Version bump.
