@@ -2,8 +2,8 @@ AUX atlas-3.7.39-decl-fix.patch 2791 RMD160 b84743fb2f255719197f7481c8826e7b2360
 AUX atlas-3.9.0-decl-fix.patch 2465 RMD160 d1e52b25e04d0f4a3417cc45777a9eb2f114e27d SHA1 7f82b74e9f4366021981a5a1406b344f6ce57469 SHA256 14b20fddedb6948d5caf517a20d702bbbcd8be8771cf1a19c2400dfa2865cf79
 AUX atlas-asm-gentoo.patch 408 RMD160 3cea2f4a5a96ec22a4d0cfc78d691198a2d1a0da SHA1 493d066be68c66cca1f0c906d588da8983ec7afa SHA256 00f9247d422c758ef8ff43446a36a6dbb7962f94e5d01307318c87a90a78355b
 AUX blas-atlas-3.9.3-darwin-make-top.patch 4931 RMD160 89d85aa6b8fba376dd668304347efa381919183b SHA1 5af62292b9816153e5f0bc64b53c5b7162a12d25 SHA256 6757a9de70bf3420f9d1f0921ecd9e4fcabf01e162ef7533294c180fa49939e5
-AUX blas.pc.in 301 RMD160 e82627c38aa09c8eb2581a4dd8a38c1670ed6098 SHA1 e8c80353ba72bee2848767b70f7575b723b84f15 SHA256 cb993e61b03514c4c69fac43540e45e759cf57635e2a8d6900118543d06ff433
-AUX cblas.pc.in 312 RMD160 a4a66d41736ba1c5fb669c8a96c48f952fb7fcf5 SHA1 85b24f0257e79e8adc8abea3e1117809cc6cf253 SHA256 df3a0733085883397c37fa273d239b0e8c9d875521383f581fdf473013c3b5c3
+AUX blas.pc.in 306 RMD160 7abfdd07326f3148c0b7c86f1ac756cb694826f9 SHA1 8de7ea35f2d6a59974ba01d7a026b42b86ea501e SHA256 869e5f1c35de42834e0f4cf796b05b9868f1dac69ac0af58bbece3a407387b5e
+AUX cblas.pc.in 317 RMD160 8e2533a8851382cbadab717fb3b28f70f132fddf SHA1 d7d2570c89939bb5501f41d2e25eeaccb965d701 SHA256 0becefff7156c3666fc504bd6004bdf1495fd1a47e2e2d588c160d8d4333e942
 AUX eselect.blas.atlas 197 RMD160 fc69bacf24979485653a2d61298fdbf21464c089 SHA1 68de5da171fdd3e0ff5a7773b36cee86bce5b76c SHA256 72e659f90bb5734b50a5ea02d92348dfcf99868ecbabdcf4cb64bf3bded4e3bb
 AUX eselect.blas.threaded-atlas 233 RMD160 eb70808c9a2e6a27b4f10f991b5c59a693e75914 SHA1 93c8a25e4e0b1e8168bafcd8fb62109e656f56ad SHA256 85d98b8a4b8eb75927eac32623dc3c6a7ee55a259176196d075f6b112ae35726
 AUX eselect.cblas.atlas 240 RMD160 08dd3aba18a1c0c5a6a9e925a506cd8a6118c906 SHA1 92184db3b149e0225b3f09b02cc29f9eea0d6869 SHA256 44234a398340b79873cf40548c0b67179d42235ddae7ef7c9b8caf7cf2f20ac9
@@ -16,6 +16,6 @@ DIST atlas3.8.2.tar.bz2 2468393 RMD160 8160ccb3af7cd7365ba87c77d636fb68b24c62ae 
 DIST atlas3.9.3.tar.bz2 4625874 RMD160 1739e67d9f5f597ceb4a63093bc619bb173b0171 SHA1 b56438eda01f09999e20b2fc99523cc205b8b905 SHA256 6ef284a74330208b2560a1b52284300ef5f77132826c1caaaf9a9241bf4434a0
 EBUILD blas-atlas-3.8.0.ebuild 7098 RMD160 3e6b49fc000ed2ce99be8fb4cfe79c99ef9231d3 SHA1 f26f2700595b59711f4a2d714fb601ebe870c79b SHA256 a13521aa9a68ec001ba2fc25303651b9a83d9b9f814c6c3b96776f5362f819bc
 EBUILD blas-atlas-3.8.2.ebuild 6804 RMD160 2860c0166eb1b296b7a634c11ffe187c0e13f229 SHA1 94ecede51f2f9402db73b931af54ea82b22d4a84 SHA256 b6de353c3942fa93af7432ba9703077dd70906c31449c3d021d023323aacf6e2
-EBUILD blas-atlas-3.9.3.ebuild 7437 RMD160 54ab1c7a6b6cdc0259dcdb94a6b521d3a4bf7945 SHA1 21827030a1aa167a1b7617967f5c6a03ccbcd88e SHA256 8088ed8c12e8f78cb9f5d77348ea2c12b16b19bb52a5c6daa9d9ba2058e54143
-MISC ChangeLog 18791 RMD160 6b3022e3e03ef2f6d9108084656817a6a34ffb30 SHA1 67107d04745f63ffdabee9729bfd68b2793ad41b SHA256 df9aed39b9c6f781f601f00a112606b17bb4a81aa84516ceb400f28149acb5d3
+EBUILD blas-atlas-3.9.3.ebuild 7467 RMD160 47d752cb9f068b89d560b372a155c494dbace899 SHA1 a01bf5989aa94a7b30ca31eb80388259801ec22a SHA256 25705179bb5c2b4d9e0edd2812aad83aa29891a96efe3789b1116a7e0eb99209
+MISC ChangeLog 18995 RMD160 c334258c227fdec84cb9f209f8cd6893025aa12d SHA1 4494a48c981ba41a6ee6f11f3556c68aa41e46a7 SHA256 f1bfe8efc26d63fe81b4c299f1a67e668e9644615b3c64493e2a4aa2c3a0756c
 MISC metadata.xml 156 RMD160 dc078172bfebcb25d69bdf8731714f9cce9d3e36 SHA1 da2b240a255820145b7c83a5c48e45b96b7e9ee6 SHA256 5d22100902db7507a5b5493dd4a66cdb08025faf80a2c0b75e6392315c47f900
