@@ -1,6 +1,11 @@
 # ChangeLog for sci-libs/blas-atlas
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.88 2008/09/23 14:20:11 bicatali Exp $
+# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-libs/blas-atlas/ChangeLog,v 1.89 2009/01/14 19:11:06 bicatali Exp $
+
+  14 Jan 2009; Sébastien Fabbro <bicatali@gentoo.org> files/blas.pc.in,
+  files/cblas.pc.in, blas-atlas-3.9.3.ebuild:
+  Now pkg-config files link to the atlas dirs, also fixed cblas and blas
+  requires
 
   23 Sep 2008; Sébastien Fabbro <bicatali@gentoo.org>
   files/eselect.cblas.threaded-atlas:
